# anime-backend

./: .gitignore  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml  requirements.txt  test.txt
anime/: admin.py  afadfafa.py  db_pop.py  models.py  schema.py  serializers.py  tests.py  views.py
anime/admin/: order_intermediate.html
anime/migrations/: 0001_initial.py  0002_awards_animeawards_anime_anime_awards.py  0002_studio_rename_studio_anime_anime_studio.py  0003_remove_anime_anime_studio_anime_anime_studio.py  0003_rename_season_anime_seasons.py  0004_alter_animeawards_anime_award_name.py  0004_anime_media_type.py  0005_alter_anime_summary.py  0005_remove_anime_anime_awards_anime_anime_awards.py  0006_alter_anime_aired_alter_anime_status.py  0006_remove_awards_award_description_anime_mal_id.py  0007_animeawards_nominated_date_animeawards_received_date.py  0007_remove_anime_aired_remove_anime_status.py  0008_anime_number_rating.py  0008_character_anime_anime_characters.py  0009_studio_remove_anime_number_rating_and_more.py  0010_vote.py  0011_remove_animeawards_anime_award_name_and_more.py  0012_alter_awards_date.py  0013_allwinners.py  0014_anime_number_rating.py  0015_alter_anime_number_rating.py  0016_character_anime_anime_characters.py  0017_anime_season.py  0018_anime_avg_rating.py  0019_remove_anime_number_rating_anime_num_rated.py
anime/scripts/: db_pop.py  delete_all.py  winner.py
anime/snapshots/: snap_tests.py
animeBackend/: asgi.py  middleware.py  schema.py  settings.py  urls.py  wsgi.py
history/: admin.py  models.py  schema.py
history/migrations/: 0001_initial.py
socialLogin/: apps.py  views.py
user/: admin.py  models.py  schema.py  test_models.py
user/migrations/: 0001_initial.py  0002_user_useranime_remove_ingredient_category_and_more.py  0003_rename_place_user_user_anime.py  0004_remove_useranime_name.py  0005_alter_useranime_anime.py  0006_remove_user_user_anime_user_user_anime.py  (+11 more)
users/: admin.py  models.py  schema.py  tests.py
(+15 files in other folders)
