[tool.poetry]
name = "animebackend"
version = "0.1.0"
description = ""
authors = ["harveyj123 <71397990+harveyj123@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
Django = "^4.1.2"
django-cors-headers = "^3.13.0"
django-allauth = "^0.52.0"
PyJWT = "^2.6.0"
django-filter = "^22.1"
coverage = "^7.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
